test/errors/managedRecord.chpl
record MyRecord {
  
}
var r2 = new shared MyRecord();
var r1 = new owned MyRecord();
